# wired-wonders-generator

./: .gitignore  README.md  pyproject.toml  startup.sh
.streamlit/: config.toml
app/: Home.py  streamlit_utils.py  style.css
app/codes/: euler_spiral.py  tiling.py  utils.py
app/pages/: 1_Tiling.py  3_Euler_Spiral.py
sketchbook/attractors_datashader/: attractors_panel.ipynb
sketchbook/chaos_theory/: draw_from_file.py  edit_image.py  find_letter.py  strange_attractors.py  strange_attractors_2.py  strange_attractors_3.py
sketchbook/chaos_theory/output/: 129.txt  206.txt  263.txt  289.txt  323.txt  384.txt  410.txt  487.txt  664.txt  717.txt  723.txt  831.txt  867.txt  896.txt  903.txt  927.txt  953.txt
sketchbook/chaos_theory/saved_attractors/: 1689241700.8494766.txt  1689241702.7305024.txt  1689241703.0823076.txt  1689242080.4133039.txt  1689242080.7308402.txt  1689242081.0837643.txt  1689242594.379286.txt  1689242594.8080802.txt  1689242595.1399791.txt  1689242595.6118128.txt  1689242595.886299.txt  1689242596.1751957.txt  1689242596.439.txt  1689242596.746844.txt  1689242597.002362.txt  1689242597.2781878.txt  1689242597.662986.txt  1689242597.8946676.txt  1689242598.1331902.txt  1689242598.3631957.txt  1689242598.5793147.txt  1689242598.8102686.txt  1689242599.0991566.txt  1689242599.4607942.txt  1689242599.6873062.txt  1689242599.9132462.txt  1689242600.200849.txt  1689242600.5072465.txt  1689242600.8169034.txt  1689242601.059792.txt  1689242601.4541903.txt  1689242601.8993368.txt  1689242602.282918.txt  1689242602.5388367.txt  1689242602.8862095.txt  (+169 more)
(+1 files in other folders)
