[tool.poetry]
name = "wired-wonders-generator"
version = "0.1.0"
description = ""
authors = ["Federico Lanzani <federico.lanzani@outlook.com>"]
readme = "README.md"
packages = [{include = "wired_wonders_generator"}]

[tool.poetry.dependencies]
python = ">=3.10.8"
matplotlib = "^3.7.2"
streamlit = "^1.24.1"
opencv-python = "^4.8.0.74"
torch = "^2.0.1"
torchvision = "^0.15.2"
easyocr = "^1.7.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

